Finished resolving all todos.

--- a/src/content/mainmatter/beispielaufgaben/vorlesung6Aufgaben.tex
+++ b/src/content/mainmatter/beispielaufgaben/vorlesung6Aufgaben.tex
@@ -2,25 +2,17 @@
 
 \minisec{Beispiel: FastEthernet im LAN:}
 
-\begin{equation}
-    R = 100 \frac{Mbit}{s},\ L = 1460\ Byte,\ \frac{L}{R}=116.8\mu s,\ RTT = 3ms
-    \label{eq:equation}
-\end{equation}
-\begin{equation}
-    \rho = \frac {\frac{L}{R}} {\frac{L}{R} + RTT} = 0.03747 = 3.74\%
-    \label{eq:equation2}
-\end{equation}
+\begin{gather*}
+    R = 100 \frac{Mbit}{s},\ L = 1460\ Byte, \ \frac{L}{R}=116.8\mu s, \ RTT = 3ms\\
+    \rho = \frac {\frac{L}{R}} {\frac{L}{R} + RTT} = 0.03747 = 3.74\%\\
+\end{gather*}
 
 \minisec{Beispiel: Kommunikation mit Kalifornien:}
 
-\begin{equation}
-    R = 100 \frac{Mbit}{s},\ L = 1460\ Byte,\ \frac{L}{R}=116.8\mu s,\ RTT = 200ms
-    \label{eq:equation3}
-\end{equation}
-\begin{equation}
-    \rho = \frac {\frac{L}{R}} {\frac{L}{R} + RTT} = 0.05837\%
-    \label{eq:equation4}
-\end{equation}
+\begin{gather*}
+    R = 100 \frac{Mbit}{s},\ L = 1460\ Byte, \ \frac{L}{R}=116.8\mu s, \ RTT = 200ms\\
+    \rho = \frac {\frac{L}{R}} {\frac{L}{R} + RTT} = 0.05837\%\\
+\end{gather*}
 
 \minisec{Übungsaufgabe 1:}
 Wir streben eine Kommunikation mit einer Mondstation an und möchten eine TCP-Anwendung unterstützen, die eine Datenrate von 100Mbit/s erzielen soll.
