--- a/src/content/mainmatter/vorlesungsfragen/vorlesung5.tex
+++ b/src/content/mainmatter/vorlesungsfragen/vorlesung5.tex
@@ -7,20 +7,16 @@
 \end{itemize}
 
 \minisec{Wozu wird das ARP-Protokoll eingesetzt? In welchem 'Layer' wird dieses Protokoll implementiert?}
+\textcolor{blue}{ARP} (Address Resolution Protocol) Layer-2 Protokoll:
 \begin{itemize}
-    \item \textcolor{blue}{ARP} (Address Resolution Protocol) Layer-2 Protokoll:
-    \begin{itemize}
-        \item Ermöglicht das Herausfinden einer MAC-Adresse auf Basis einer versendeten IP-Adresse
-        \item Funktioniert über Broadcast-Paket an MAC FF:FF:FF:FF:FF:FF
-        \item Der Host mit der angefragten IP-Adresse antwortet mit seiner MAC-Adresse
-        \item Der empfangende Knoten ‚cached‘ i.\ d.\ R. die MAC-Adressen
-    \end{itemize}
+    \item Ermöglicht das Herausfinden einer MAC-Adresse auf Basis einer versendeten IP-Adresse
+    \item Funktioniert über Broadcast-Paket an MAC FF:FF:FF:FF:FF:FF
+    \item Der Host mit der angefragten IP-Adresse antwortet mit seiner MAC-Adresse
+    \item Der empfangende Knoten ‚cached‘ i.\ d.\ R. die MAC-Adressen
 \end{itemize}
 
 \minisec{Wo befindet sich die ARP-Tabelle?}
-\begin{itemize}
-    \item Das Address Resolution Protocol (ARP) arbeitet auf der Schicht 2, der Sicherungsschicht, des OSI-Schichtenmodells
-\end{itemize}
+Das Address Resolution Protocol (ARP) arbeitet auf der Schicht 2, der Sicherungsschicht, des OSI-Schichtenmodells
 
 \minisec{Welche Vorteile hat das DHCP-Protokoll gegenüber dem älteren RARP-Protokoll?}
 \begin{itemize}
