--- a/src/content/mainmatter/beispielaufgaben/vorlesung7Aufgaben.tex
+++ b/src/content/mainmatter/beispielaufgaben/vorlesung7Aufgaben.tex
@@ -4,18 +4,19 @@
 Beim TCP Verbindungsaufbau wird der 3-way-handshake benutzt.
 \begin{enumerate}
     \item Warum wird nicht ein 'einfacher' Handshake, also nur 2 Nachrichten, verwendet?
-    \item Wissen beiden Seiten nach der 3. Nachricht sicher, dass die Verbindung aufgebaut ist?
+    \item Wissen beiden Seiten nach der 3.\ Nachricht sicher, dass die Verbindung aufgebaut ist?
     \item Warum ist der 3-way-handshake bei TCP trotzdem sicher?
 \end{enumerate}
 
 \minisec{Übungsaufgabe 2:}
 \begin{enumerate}
     \item Erklären Sie das Silly-Window-Syndrom!
-    \item Was passiert, wenn eine bestehende TCP-Verbindung über Stunden nicht genutzt wird? Was passiert, wenn einer der beiden verbundenen Rechner abstürzt?
+    \item Was passiert, wenn eine bestehende TCP-Verbindung über Stunden nicht genutzt wird?
+    Was passiert, wenn einer der beiden verbundenen Rechner abstürzt?
 \end{enumerate}
 
 \minisec{Übungsaufgabe 3:}
-Woher kennt TCP die Größe der übermittelten Nutzdaten (bzw. wie 'lang' ein übertragenes Segment ist) ?
+Woher kennt TCP die Größe der übermittelten Nutzdaten (bzw.\ wie 'lang' ein übertragenes Segment ist) ?
 
 \minisec{Übungsaufgabe 4:}
 Sie möchten mit der West-Küste der USA eine TCP-basierte Kommunikation durchführen.
